--- a/gb/news2007_9.md
+++ b/gb/news2007_9.md
@@ -1,4 +1,19 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>文化艺术</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/4/n11497271.md#1" target="_blank">永生者</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/4/n11497271.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/05/1511031551192483-150x120.jpg" align ="left"></a>如果预知自己的死期，你会怎么过你的人生？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月04日 8:25 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/9/n11441792.md#1" target="_blank">天地清明引(35) 宫廷变－嫌疑解除1</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/9/n11441792.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/01/1201010529192357-150x120.jpg" align ="left"></a>话说笑笑与小四两两人一直往东行，小四两见她伤重，便买了匹马儿牵着走。日头正盛，笑笑不觉晕了过去。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月04日 8:00 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/3/n11496618.md#1" target="_blank">七律：咏向日葵</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/3/n11496618.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/10/100912014656100393-150x120.jpg" align ="left"></a> 千亩葵田接八荒 朝曦喷薄半天黄 风吹岂改崇阳日 雨打何期倚短墙......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月04日 12:03 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/3/n11496658.md#1" target="_blank">开生了锈的心</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/3/n11496658.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/08/heart-700141_640-150x120.jpg" align ="left"></a>因爱而闭锁的心，只有用爱才能再次开启。这不是件容易的事，但是“爱是恒久忍耐”的求诸于己的实践，何况犯错的是自己，受惩罚折磨，也该逆来顺受的啦。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 11:51 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11492308.md#1" target="_blank">【历史回眸】香港保卫战（上）：拒绝沦陷</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11492308.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Battle_of_HK_03-150x120.jpg" align ="left"></a>1941年12月8日7时，香港启德机场上空，突然飞来几十架飞机，紧接着一阵猛烈的爆炸声响起，香港街面上、酒吧间电影院里享受着生活的人们，望着远处浓烟滚滚的天空，疑惑地抬起头：“70%是防空演习，报纸上没说战争已经逼近了呀。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 10:29 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/5/17/n11264069.md#1" target="_blank">《幼学》故事（37）鲁班的天命</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/5/17/n11264069.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/1812312235052357-600x400-150x120.jpg" align ="left"></a>公输班削竹木制成老鹰，飞上天空三日都还没有落下；张僧繇在金陵安乐寺的墙壁上画龙，画上眼睛之后，雷电交加，墙上的龙破壁而出，腾空飞上天。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 8:38 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/24/n11475066.md#1" target="_blank">“有些债还不完” 东西方神话传说：轻生有罪</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/24/n11475066.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/05/1001201138301684-150x120.jpg" align ="left"></a>轻生的人，积下的业债怎么也还不完。首先，他的肉身是父母给的，生命是神明赐予的，自断性命，便欠下了父母的债，神明的债。其次，他的吃、穿、住、用、行均是依靠大地山川所赋予的资源。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 5:30 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/3/n11495690.md#1" target="_blank">打造健康亲子关系：多赞扬 慎批评</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/3/n11495690.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Fotolia_170239778_Subscription_L-150x120.jpg" align ="left"></a>很多孩子常常抱怨父母总是抓住他们做错的事情喋喋不休，而对他们值得肯定的表现却吝于赞扬。这种感觉也许不是事实，因为绝大多数父母的本意是为了帮助孩子，为此也会努力实践正面鼓励。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 3:41 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/3/n11495614.md#1" target="_blank">如何帮助孩子培养学术勇气</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/3/n11495614.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Fotolia_136576375_Subscription_L-150x120.jpg" align ="left"></a>什么是学术勇气？学术勇气有时也称为勇气，是学生在学习中遇到困难，经历恐惧或怀疑时，依然坚持学下去。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 3:28 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11492231.md#1" target="_blank">【文史】何谓三老五更 竟让天子行跪拜之礼</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11492231.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/01/Liji-150x120.jpg" align ="left"></a>受现代影视剧的影响，现代人想当然地认为，高高在上的天子、皇帝只有接受臣子们跪拜的份儿，根本不可能有皇帝反过来给臣子行这样的礼的情况，偶尔有天子求贤若渴，最多也就是行行揖礼罢了。然而，真实的历史却让我们大吃一惊。比如在现代鲜为人知的尊养“三老五更”的仪式上。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 1:40 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/3/n11495296.md#1" target="_blank">小企业奋斗史：陆王（中）</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/3/n11495296.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Japanese_socksshiro-tabigyoda-cityjapan-150x120.jpg" align ="left"></a>同样是穿在脚上的产品，但业界不同，竟如此天差地远啊。宫泽感触良多，这时他看到跑鞋架上展示的一只鞋。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 12:34 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494452.md#1" target="_blank">寓言故事：上当的大公鹿</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494452.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Fotolia_101600668_Subscription_L-150x120.jpg" align ="left"></a>大公鹿听了狐狸讲这些话，不仅有点飘飘然，当然，它可不笨，它才不会轻易听信“狡猾”的狐狸讲的话呢！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 11:17 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11490582.md#1" target="_blank">【我来说西游3】孙悟空的七十二变也有bug！</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11490582.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/15c0c9f428cb70e2_ttl7dayo8L_eagleArtboard_4-150x120.jpg" align ="left"></a>为什么菩提祖师要让孙悟空学七十二变呢？竟然是要躲避三灾利害？！三灾？是哪三灾？天雷劈、阴火烧、赑风吹，这三灾可是每五百年就来问候一下他。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 9:46 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11480236.md#1" target="_blank">“五脊六兽”为何登上中国传统建筑屋脊？</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11480236.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/04/shutterstock_291430259-150x120.jpg" align ="left"></a>鸱尾、五脊六兽、九脊十兽各是什么呢？中华传统建筑采用这些脊兽装饰有什么含意和作用呢？最顶级的中华传统建筑装饰多少脊兽呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 8:55 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/9/n11441502.md#1" target="_blank">天地清明引(34) 宫廷变－王庭宴飨2</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/9/n11441502.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/1675f8ad89cbb44fd9887b00007efbe4-150x120.jpg" align ="left"></a>朱公公掌灯，皇甫亦节回到王庭正殿。夜风微醉，心乏眼困，皇甫亦节宽衣卧床，只感心力交瘁。辗转反侧间，回忆大门敞开，那段黑暗岁月，总在不经意间、迷惘困顿时，闯入脑海，如梦魇般，久久挥之不去……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494335.md#1" target="_blank">青松絮语：当道歉成为仪式</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494335.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/Fotolia_134762061_Subscription_L-150x120.jpg" align ="left"></a>当道歉仅仅成为一种仪式，人与人的相处中便只剩文明的外表。而我们真正需要的，是能够反省自身失误并包容对方不足的心胸。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 12:07 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11492080.md#1" target="_blank">五律：恒山悬空寺（二首）</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11492080.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/12/1210070917291758-150x120.jpg" align ="left"></a>依山接天近，绝世岂嫌高。 壁峭辞惊鸟，峡空听骇涛。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 10:55 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11492269.md#1" target="_blank">一个真实的“聊斋故事”</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11492269.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/11/winter-1974709_640-150x120.jpg" align ="left"></a>讲一件我自己亲身经历的事。我25岁，大学刚刚毕业，留在北京工作。我老家在北方一个山峦包围的狭长盆地中，这里平均海拔超过1100米，水草丰美，牛羊众多，从战国起就是有名的“皮都”，家家也多供奉着各类“地仙精灵”的造像。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 6:56 PM			</td></tr>
@@ -8,19 +23,10 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11491780.md#1" target="_blank">无价的礼物</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11491780.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/123fe4662a0a87cea9daf46142acb0e9.jpg-1-150x120.jpg" align ="left"></a>朋友最近约我到大卖场挑选背包，我起先以为是他自己想使用的，后来，他才跟我说是要买给学生的。因为当老师的他跟学生约定，只要他考到全班前几名，就要买给他当礼物。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 10:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11489376.md#1" target="_blank">我在太空的340天</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11489376.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/c45ed2a235bffb72ea8def18f349d582-150x120.jpg" align ="left"></a>史考特·凯利（Scott Kelly）来自美国纽泽西州的贫穷问题家庭，他不是精英，也不是富二代，但他用自己的方式，当上了太空人，活出了理想的人生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 9:07 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11489365.md#1" target="_blank">静美 如此难得</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11489365.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/summer-783347_1920-150x120.jpg" align ="left"></a>就在这安静下来的时刻，我们听见鸟啭莺啼，春风拂过树梢婆娑作响，这些来自山林的天籁其实一直都在，只是方才被人造的声音淹没了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 8:55 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/9/n11441388.md#1" target="_blank">天地清明引(33) 宫廷变－王庭宴飨1</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/9/n11441388.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/03/2c5d626713eb97cca6bfdc009c5a8a92-150x120.jpg" align ="left"></a>王城，今日热闹非常，歌不停，舞不歇，远道贵客，姗姗来迟。八百里急报数次，且待且待。夜幕降临，众大臣鱼贯入宴，歌舞升平，热闹非常。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 8:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11492088.md#1" target="_blank">连环画：走过劫难（2）</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11492088.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/44-150x120.jpg" align ="left"></a>2001年11月，很多外地来京上访的法轮功学员被抓进来。因为不想让当地受牵连，他们不报姓名、地址，警察给他们编了号。他们的钱被警察扣下，连牙刷都不能买，只有我一个北京人有牙刷。当时是一个牙刷几十个人用！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 1:47 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/5/30/n11290174.md#1" target="_blank">忠则必正 有正然后用其能</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/5/30/n11290174.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/07/1707080933032357-150x120.jpg" align ="left"></a>前些日子，朋友求助于笔者帮忙处理一个在海外的白领人士心中的纠结。对方在电话中告诉我他的矛盾，他带着中国顶尖大学毕业生的光环来到了海外，完成学业后进入职场十几年，但是每天生活得十分紧张，生怕丢了工作。但是越担心反而越容易发生事情，那天在公司发生的饭盒事件让他坐立不安，甚至深度的怀疑自己会因此丢掉工作。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 11:38 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11491951.md#1" target="_blank">诗歌：秋月</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11491951.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/full-moon-2698762_1920-150x120.jpg" align ="left"></a>月映波心一颗珠 朗照人间看今古 秋来秋去往事烟 戏里戏外几人悟......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 9:15 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/14/n11452654.md#1" target="_blank">康有为怎么看 北碑龙门二十品传世之美</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/14/n11452654.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/37284ed3ff3022906dbab59006f571a4-150x120.jpg" align ="left"></a>清代康有为说北碑“笔法舒长刻入，雄奇角出，迎接不暇，实为唐宋之所无有”。北碑中的魏碑精品“龙门二十品”有什么显着的特点，为何康有为尊崇北碑的艺术？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 5:53 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/14/12/15/n4318504.md#1" target="_blank">各有“如愿女”的四个男人  谁最幸福</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/14/12/15/n4318504.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/12/Famous_Women_1799_M-150x120.jpg" align ="left"></a>如愿是水府龙宫中的女神，也就是当年彭泽湖龙王清洪君，赠送给庐陵人欧明的那位如愿。因她事事能满足人的要求，所以得“如愿”这个名字。据说，水府中处处都有如愿，但能不能遇上，就得靠各人的福分了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 5:42 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/24/n11474574.md#1" target="_blank">【定数篇】另外空间受赏金银 真实人生一一兑现</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/24/n11474574.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/a755d89c90221c24aba8a54a36bca7b9-150x120.jpg" align ="left"></a>南宋丞相史浩在没及第之前，家境极为清贫。有一年的除夕，他做了一梦，得到许多金银宝物。后来，他一生中先后得到的赏赐，恰好是梦中得到赏赐的数目一样，不多也不少。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 10:30 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11486930.md#1" target="_blank">舌尖上的家族记忆</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11486930.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/10/1708291425252483-150x120.jpg" align ="left"></a>父亲说，一过立春，十香菜便经常出现在老家的餐桌上，除夕的年夜饭更非得有一大盘不可，因为十香菜有“十全十美”的寓意。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 9:18 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/8/n11439768.md#1" target="_blank">天地清明引(32) 满庭芳－暗器争评3</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/8/n11439768.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/11/1511111316001695-150x120.jpg" align ="left"></a>飞刀门、飞剑门、寒刀门小部分人在寒锋所施保护丝网下，幸免遇难。大部分人却遭受毒雾荼毒，丧命殒身，其中又以寒刀门最重。众人在纱网中唏嘘，便是只隔一层纱，却是生死之别。眼睁睁看着曾经的兄弟、好友纷纷罹难，众人心如锥刺，却无能为力，纱网之中一片哭声。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 8:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488412.md#1" target="_blank">人生感悟：话鸡 画鸡</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488412.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/IMAG0473-2-150x120.jpg" align ="left"></a>我有一盒12色的水彩，因不是科班出身，不怎么会画，都没用。前年过年期间，两个小侄女回来，一个3岁多，一个1岁多，小的跟着大的，两个在玩我的水彩与水彩笔，把调色用的五个梅花盘上面调了各种颜色，玩到她们的妈妈骂她们：“你们不要再浪费姑姑的东西了！”两个小家伙弄得很乱，我只好在旁边很辛苦地擦掉她们画在家具上的颜色。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 2:54 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/23/n11404263.md#1" target="_blank">邯郸，成语的故乡（五）</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/23/n11404263.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/Zhao_Handan_Gucheng_01-150x120.jpg" align ="left"></a>公元前251年，在赵国和秦国又同时发生了一件大事：赵国的平原君和秦国的昭襄王在这一年相继去世。燕国趁机攻赵，被廉颇、乐毅击退，并进而围攻燕国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 8:23 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/19/n11464111.md#1" target="_blank">见证五台山神迹 北宋宰相张商英亲历记</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/19/n11464111.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/06/906281712281119-150x120.jpg" align ="left"></a>张商英急忙换上官袍，焚香礼拜，一拜还未起身，就看见祥云之中显现出金桥与金色相轮。轮内是深绀青色。商英心中怀疑，那光色是落日余晖反射形成的颜色。但是，天色越来越暗沉，山前涌出的三道霞光，却格外光彩绚丽。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 5:48 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/9/27/n8341488.md#1" target="_blank">【文史】汉武帝有仙缘 得西王母授道</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/9/27/n8341488.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/06/1606291331081456-150x120.jpg" align ="left"></a>因为汉武帝虔心向道，西王母又将最珍贵最秘密的经典《五岳真形图》授予武帝，希望他抛开所有的疑虑和杂念，专心修行，并通过他来启发人间那些想学道的人们，使更多的凡人知道天地间确实有神仙道术存在，以此使那些不信神道的人能抛弃愚蠢狂妄之念。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 4:52 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/3/n11496632.md#1" target="_blank">唐浩：香江启示录</a><br></h3>   赤涛沸涌祸香江    万民正气驱魔狂    正邪激战骇天浪    血泪醒世铭宇殇......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 11:18 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/3/n11496626.md#1" target="_blank">新诗：生命诗韵</a><br></h3> 挥手时光 岁月悠远含香 人生几笺诗行 红尘流浪 轮回徜徉 听潇潇夜雨 看芳草斜阳 历尽青史沧桑......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 11:09 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494296.md#1" target="_blank">一七令．天地之造化</a><br></h3> 兴。  万物，春生。  三伏热，雨清清。  秋后一伏，百草凋零。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 1:03 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494289.md#1" target="_blank">诗歌：秋鼠</a><br></h3> 嗅得秋之味，  屯仓鼠盗粮。  贪官闻末日，  喋血满皮囊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 12:23 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494283.md#1" target="_blank">诗歌：秋肃</a><br></h3>金风御驾出辕门， 
 各路天神列阵云。 
 奋斩群妖雷作鼓， 
@@ -32,11 +38,5 @@
 
 责任编辑：林芳宇......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 12:04 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494120.md#1" target="_blank">天雪：紫薇（五绝）</a><br></h3> 绮陌铺芳径，花明彼岸香。 枝头扬紫韵，竞醉沐曦妆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 10:42 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11492068.md#1" target="_blank">七律：秋意</a><br></h3>天意阴沉云凛肃，  大河汹涌水奔流。  惊雷炸响苍天怒，  罪账翻开诸恶愁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 12:02 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11492047.md#1" target="_blank">一七令．五岳</a><br></h3>山。  华夏，名山。  南岳美，秀衡山。  奇险天下，西岳华山。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 11:34 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11490645.md#1" target="_blank">台湾古典诗：明珠黯淡</a><br></h3> 东方失色一明珠，九七回归步棘途； 民主自由成历史，香江愿景实堪虞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 9:23 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11490641.md#1" target="_blank">七律：秋雨</a><br></h3> 入秋连降潇潇雨，  莫测风云费智商。  时疾时徐生节奏，  又雷又闪动声光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 1:06 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11490638.md#1" target="_blank">生查子．回天是愿</a><br></h3> 人世几日游，法舵回天处。  不被富贵牵，不为亲情误。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 1:03 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11490633.md#1" target="_blank">一七令．江河湖海云之南</a><br></h3> 南。  七彩，云南。  中原阔，看河南。  天涯海角，椰岛海南。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 1:01 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_8.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;9&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_10.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/asdfghy6/djy/blob/master/gb/news2007_9.md#1<br><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_9.md#1"><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfghy6/djy/blob/master/gb/news2007_9.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_9.htm">http://www.epochtimes.com/gb/news2007_9.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
